# setpilot-discord

./: .bash_history  .dockerignore  .env.example  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.devcontainer/: Dockerfile-dev  compose.yaml
app/bot/: config.py  db.py  listener.py  llm.py  sql_guard.py
