[project]
name = "setpilot-agent"
version = "0.1.0"
description = "Discord listener bot for Setpilot agent"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "discord.py>=2.4.0",
    "httpx>=0.27.0",
]

[project.scripts]
bot = "app.bot.listener:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
